[tool.poetry]
name = "devops-challenge"
version = "0.1.0"
description = ""
authors = ["Manoj Kumar Lavu <manojlavu@gmail.com>"]
packages = [
    { include = "app.py" }
]
[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.1"
sqlalchemy = "^1.4.25"
alembic = "^1.7.3"
hypercorn = "^0.11.2"
structlog = "^21.1"
psycopg2 = "^2.9.1"
databases = {version = "^0.5.2", extras = ["postgresql"]}

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-watch = "^4.2.0"
requests = "^2.26"
black = "^21.9b0"
pylama = "^7.7.1"
mypy = "^0.910"
pdbpp = "^0.10.3"
pytest-cov = "^3.0.0"
pytest-asyncio = "^0.15.1"
asgi_lifespan = "^1.0.1"
httpx = "^0.19.0"
faker = "^8.16.0"

[build-system]
requires = ["poetry>=1.1.0"]
build-backend = "poetry.masonry.api"
